[gd_scene load_steps=11 format=3 uid="uid://dydpnhpyidmsa"]

[ext_resource type="StyleBox" uid="uid://b6my5kblcuosw" path="res://ChatRoom/Assets/TransparentBackground.tres" id="1_kori1"]
[ext_resource type="Script" path="res://Store/store.gd" id="1_ualnb"]
[ext_resource type="FontFile" uid="uid://6vhn43ra26qi" path="res://Fonts/PixelifySans-Regular.ttf" id="3_6ipvt"]
[ext_resource type="Theme" uid="uid://dcho8yr3orscl" path="res://Store/Assets/Store_theme.tres" id="3_lxllq"]
[ext_resource type="StyleBox" uid="uid://da00k2s6jcjv" path="res://WarningPanel.tres" id="5_pwy3b"]
[ext_resource type="LabelSettings" uid="uid://dqewxrfiel10j" path="res://Store/WarningLabel.tres" id="6_t2jdo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlfyv"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.786054, 0.720615, 0, 1)

[sub_resource type="Theme" id="Theme_qasfy"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_hlfyv")

[sub_resource type="LabelSettings" id="LabelSettings_hcan1"]
font = ExtResource("3_6ipvt")
font_size = 40
font_color = Color(0.786054, 0.720615, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvg1q"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.8, 0, 0, 1)

[node name="Store" type="CanvasLayer"]
script = ExtResource("1_ualnb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.38

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_kori1")

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 7.67
theme = SubResource("Theme_qasfy")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "Mems + 3000"
label_settings = SubResource("LabelSettings_hcan1")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="CloseButton" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
theme = ExtResource("3_lxllq")
theme_override_colors/font_color = Color(0.786054, 0.720615, 0, 1)
text = "X"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 12.83

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
columns = 10

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.22

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer3"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_stretch_ratio = 8.1

[node name="ItemNumberLabel" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_lxllq")
text = "5 ITEMS"
horizontal_alignment = 1

[node name="TotalCostLabel" type="Label" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_lxllq")
text = "$ 100000"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer3/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="BuyButton" type="Button" parent="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer3/HBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme = ExtResource("3_lxllq")
text = "Buy"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_kori1")

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ErrorPanel" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="ErrorPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_kori1")

[node name="ErrorPanel" type="PanelContainer" parent="ErrorPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.6
theme_override_styles/panel = ExtResource("1_kori1")

[node name="HBoxContainer" type="HBoxContainer" parent="ErrorPanel/ErrorPanel"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="ErrorPanel/ErrorPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_kori1")

[node name="PanelContainer" type="PanelContainer" parent="ErrorPanel/ErrorPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 7.66
theme_override_styles/panel = ExtResource("5_pwy3b")

[node name="CenterContainer" type="CenterContainer" parent="ErrorPanel/ErrorPanel/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ErrorPanel/ErrorPanel/HBoxContainer/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_tvg1q")
text = " /!\\ TRANSACTION FAILED : NOT ENOUGH MONEY /!\\ "
label_settings = ExtResource("6_t2jdo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="ErrorPanel/ErrorPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_kori1")

[node name="PanelContainer2" type="PanelContainer" parent="ErrorPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_kori1")

[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer/CloseButton" to="." method="OnClosePressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer2/HBoxContainer/PanelContainer2/VBoxContainer/PanelContainer3/HBoxContainer2/MarginContainer/BuyButton" to="." method="OnBuy"]
